[package]
name = "cambiare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
crossbeam-channel = "0.5.8"
derive_more = "0.99.17"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }

[[bench]]
name = "orderbook"
harness = false

[dev-dependencies]
criterion = "0.5.1"
